src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>F2_Reviewed_implementation_estimate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Have they reviewed an implementation estimate? Blocks progression to Selected.</inlineHelpText>
        <label>F2 Reviewed implementation estimate*</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>F2__c</fullName>
        <formula>if( F2_Reviewed_implementation_estimate__c ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>F2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>F3_Two_or_more_references__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Have they spoken with two or more of our references?</inlineHelpText>
        <label>F3 Two or more references</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>F3__c</fullName>
        <formula>if( F3_Two_or_more_references__c ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>F3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>F4_Technical_POC__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Have they conducted a technical POC or is one scheduled?  A technical POC is a multi-day, hands-on event to demonstrate how we do configuration and integration to their technical team.</inlineHelpText>
        <label>F4 Technical POC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>F5_End_user_test_drive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Have they conducted an end-user test drive, or is one scheduled?  A test drive is an event where prospect staff us the application hands on.</inlineHelpText>
        <label>F5 End-user test drive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FA1_Approved_by_CEO__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has the deal been approved by the CEO, CFO, COO or other most senior required approver within the company?</inlineHelpText>
        <label>FA1 Approved by CEO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FA1__c</fullName>
        <formula>if( FA1_Approved_by_CEO__c ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FA1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FA2_Agreed_to_commercial_terms__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Have commercial terms (term, $, payment terns, growth, termination/renewal) been agreed to and documented?</inlineHelpText>
        <label>FA2 Agreed-to commercial terms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FA2__c</fullName>
        <formula>if( FA2_Agreed_to_commercial_terms__c ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FA2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FA3_Contracts_approved__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Have contracts been approved by business, procurement and legal for signature?</inlineHelpText>
        <label>FA3 Contracts approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FA3__c</fullName>
        <formula>if( FA3_Contracts_approved__c ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FA3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Payment_Due_Date__c</fullName>
        <label>First Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fiscal_Period__c</fullName>
        <description>Fiscal Period based on Closed Date of Oppty</description>
        <formula>CASE(MONTH(CloseDate),
1, &quot;Q2&quot; ,
2, &quot;Q3&quot;,
3, &quot;Q3&quot;,
4, &quot;Q3&quot;,
5, &quot;Q4&quot;,
6, &quot;Q4&quot;,
7, &quot;Q4&quot;,
8, &quot;Q1&quot;,
9, &quot;Q1&quot;,
10, &quot;Q1&quot;,
11, &quot;Q2&quot;,
12, &quot;Q2&quot;,
&quot;None&quot;)

&amp; &quot;-&quot;

&amp; IF((MONTH(CloseDate) &gt;= 8 &amp;&amp; MONTH(CloseDate) &lt;= 12),
TEXT (YEAR(CloseDate)+1) ,
TEXT (YEAR(CloseDate))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast_Trend_Snapshot_Date__c</fullName>
        <formula>today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Trend Snapshot Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Formal_Pricing_Delivered__c</fullName>
        <inlineHelpText>Date that a true pricing proposal is delivered.  May be included in an RFP.</inlineHelpText>
        <label>Formal Pricing Delivered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GuidewireLive__c</fullName>
        <defaultValue>0</defaultValue>
        <label>GuidewireLive</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Guidewire_Key_Messages__c</fullName>
        <description>What are our key messages in response to these issues?</description>
        <inlineHelpText>What are our key messages in response to these issues? This is the place to define the deal&apos;s &apos;elevator pitch&apos;.</inlineHelpText>
        <label>Guidewire Key Messages</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Guidewire_Role__c</fullName>
        <label>Guidewire Role</label>
        <picklist>
            <picklistValues>
                <fullName>Request Assistance (Selling GW Products)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provide Assistance (Selling Mitchell Products)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HQ_Visit_Date__c</fullName>
        <inlineHelpText>Date of scheduled or completed HQ visit.  For multi-day visits, just enter the first day.</inlineHelpText>
        <label>HQ Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hold_Sales_Rep_Expiration__c</fullName>
        <description>The date the Hold expires for the holding sales rep</description>
        <label>Hold Sales Rep Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hold_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sales Rep is holding the oppt durring the account transition</description>
        <label>Hold Sales Rep</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>AMER Sales Executive User - 2012,INTL Sales Executive User - 2012</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Identify_Guidewire_executive_sponsor__c</fullName>
        <label>GW Executive Sponsor</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InfoCenter__c</fullName>
        <description>This field captures 1 or 0 when Infocenter is chosen in the Products type selection. It is not exposed on any Page layout, but all GW profiles have access to this field so they could use it in Reports.</description>
        <label>InfoCenter</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InsuranceCloud_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>InsuranceCloud Partner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (InsuranceCloud Partner)</relationshipLabel>
        <relationshipName>Opportunities7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InsuranceSuite_Approval_Comments__c</fullName>
        <description>InsuranceSuite Approval Comments</description>
        <label>InsuranceSuite Approval Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InsuranceSuite_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>InsuranceSuite Approved (PM)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InsuranceSuite_Notes__c</fullName>
        <label>InsuranceSuite Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Suite_Approved_PMM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>InsuranceSuite Approved (PMM)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Business_Drivers__c</fullName>
        <description>What are the key issues the carrier is using to evaluate vendors?</description>
        <inlineHelpText>What are the key issues the carrier is using to evaluate vendors?</inlineHelpText>
        <label>Key Business Drivers</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Date_Order_Renewed__c</fullName>
        <label>Last Date Order Renewed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Live_Approval_comments__c</fullName>
        <description>Live Approval Comments.</description>
        <label>Live Approval Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Live_Approved_PPM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Live Approved (PPM)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Live_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Live Approved (PM)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Live_Notes__c</fullName>
        <label>Live Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Live_Offerings__c</fullName>
        <label>Live Offerings</label>
        <picklist>
            <picklistValues>
                <fullName>Canvas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compare (SSA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compare Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canvas + Hail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MyAgents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spotlight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ViewPoint</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Immature product (feature gaps)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immature content (e.g., forms)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No policy system</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No relevant live references</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidewire too small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect too small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incumbent advantage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (describe in Reasons for Loss)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Lost_to__c</fullName>
        <description>Competitor who won the opportunity</description>
        <label>Lost to</label>
        <picklist>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accenture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eBao Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fineos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiserv</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siebel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valley Oak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OneShield</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Maintenance__c</fullName>
        <description>Annual maintenance dollar amount</description>
        <label>Perpetual - Annual Maintenance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Managed_Services_Hosting__c</fullName>
        <inlineHelpText>Is the carrier looking to have the solution either hosted or managed for them? No and Yes should be for definitive responses. Possibly should be less than 50% chance while Likely should be greater than 50% chance.</inlineHelpText>
        <label>Managed Services / Hosting</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Possibly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Managed_Services_Note__c</fullName>
        <label>Managed Services Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Management_Forcast__c</fullName>
        <label>Management Forecast</label>
        <picklist>
            <picklistValues>
                <fullName>Forecasted</fullName>
                <color>#009900</color>
            </picklistValues>
            <picklistValues>
                <fullName>Upside</fullName>
                <color>#FFFF66</color>
            </picklistValues>
            <picklistValues>
                <fullName>Stretch</fullName>
                <color>#FF9900</color>
            </picklistValues>
            <picklistValues>
                <fullName>Not In Forecast</fullName>
                <color>#FF0000</color>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mobile_Portal_Notes__c</fullName>
        <label>Mobile &amp; Portals Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Portals_Approved_PMM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile &amp; Portals Approved (PMM)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile_Portals_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile &amp; Portals Approved (PM)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile_and_Portal_Approval_Comments__c</fullName>
        <description>Mobile and Portals Approval Comments.</description>
        <label>Mobile and Portals Approval Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Step_Due_Date__c</fullName>
        <label>Next Step Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Days_Since_Last_Edited__c</fullName>
        <description>For reporting- Checks number of days since last updated.</description>
        <formula>Now() -  LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Days Since Last Edited</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_SAP_DI_Cores__c</fullName>
        <inlineHelpText>If a net new opportunity,4 is the minimum number of cores required</inlineHelpText>
        <label>Number of SAP DI Cores</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Chronology__c</fullName>
        <description>Log of activities on opportunity</description>
        <inlineHelpText>Account manager&apos;s log of key activities, in reverse-chronological order; Description should be used only for sales intention (what we are selling and why).</inlineHelpText>
        <label>Opportunity Chronology</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <label>Opportunity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Net New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net New +</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DWP Adjustment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cross Sell - Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cross Sell - LOB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cross Sell - Geo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RPI/CPI Increase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer - Acquisition</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Oppt_Started_By_InsideSales__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag indicates that the oppt was created by inside sales. Other indicators include an inside sales representative is listed as the creator of the oppt.</description>
        <label>Oppt_Started_By_InsideSales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Opportunity_New__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Test . used in Process builder</description>
        <label>Original Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities (Original Opportunity)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Opportunity__c</fullName>
        <description>Id of the original opportunity in this series</description>
        <label>Original Opportunity-T</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Oppty_ID__c</fullName>
        <label>Original Oppty ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMM_Approval_Date_DM__c</fullName>
        <label>PMM Approval Date (DM)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMM_Approval_Date_InsuranceSuite__c</fullName>
        <label>PMM Approval Date (InsuranceSuite)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMM_Approval_Date_Live__c</fullName>
        <label>PMM Approval Date (Live)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMM_Approval_Date_MP__c</fullName>
        <label>PMM Approval Date (M&amp;P)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMM_Approval_Date_SBP__c</fullName>
        <label>PMM Approval Date (SBT)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PM_Approval_Date_DM__c</fullName>
        <label>PM Approval Date (DM)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PM_Approval_Date_InsuranceSuite__c</fullName>
        <label>PM Approval Date (InsuranceSuite)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PM_Approval_Date_Live__c</fullName>
        <label>PM Approval Date (Live)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PM_Approval_Date_MP__c</fullName>
        <label>PM Approval Date (M&amp;P)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PM_Approval_Date_SBP__c</fullName>
        <label>PM Approval Date (SBT)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PRM_Commission_Rate__c</fullName>
        <defaultValue>0.10</defaultValue>
        <label>Commission Rate</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PRM_Contact_Permissions__c</fullName>
        <label>Contact Permissions</label>
        <picklist>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct - with Partner Permission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Through Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRM_GW_Contribution_Factor__c</fullName>
        <label>GW Contribution Factor</label>
        <picklist>
            <controllingField>Guidewire_Role__c</controllingField>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRM_GW_Integration_Existence_Factor__c</fullName>
        <label>GW Integration Existence Factor</label>
        <picklist>
            <controllingField>Guidewire_Role__c</controllingField>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRM_GW_Product_Revenue__c</fullName>
        <label>GW Product Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PRM_GW_Revenue_Sharing_Frequency__c</fullName>
        <label>GW Revenue Sharing Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>One Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recurring</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRM_GW_Revenue_Sharing_Rate__c</fullName>
        <label>GW Revenue Sharing Rate</label>
        <picklist>
            <controllingField>Guidewire_Role__c</controllingField>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRM_Guidewire_Revenue_Share__c</fullName>
        <description>IF(ISPICKVAL(PRM_GW_Revenue_Sharing_Frequency__c, &quot;One Time&quot;), (PRM_Commission_Rate__c * value(text(Amount))* (value(text(PRM_Influence_Factor_Rate__c)))/100),(Amount * (value(text(PRM_GW_Revenue_Sharing_Rate__c)))/100 *(value(text(PRM_GW_Integration_Existence_Factor__c)))/100 * (value(text(PRM_Influence_Factor_Rate__c)))/100 * (value(text(PRM_GW_Contribution_Factor__c)))/100 * (value(text(PRM_Retention_factor__c)))/100))</description>
        <formula>IF( 
ISPICKVAL(PRM_GW_Revenue_Sharing_Frequency__c, &quot;One Time&quot;) 
 &amp;&amp; (ISPICKVAL(PRM_Influence_Factor_Rate__c, &quot;&quot;) 
 || (ISPICKVAL(PRM_Influence_Factor_Rate__c, &quot;0&quot;))), 
(PRM_Commission_Rate__c * Amount), 


IF( 
ISPICKVAL(PRM_GW_Revenue_Sharing_Frequency__c, &quot;One Time&quot;) 
&amp;&amp; !ISPICKVAL(PRM_Influence_Factor_Rate__c, &quot;&quot;), 
(PRM_Commission_Rate__c) * Amount * (value(text(PRM_Influence_Factor_Rate__c))/100), 


IF( 
ISPICKVAL(PRM_GW_Revenue_Sharing_Frequency__c, &quot;Recurring&quot;), 
(((value(text(PRM_GW_Integration_Existence_Factor__c)))/100) * (value(text(PRM_GW_Revenue_Sharing_Rate__c))/100) * Amount * ((value(text(PRM_GW_Contribution_Factor__c)))/100) * ((value(text(PRM_Influence_Factor_Rate__c)))/100) * ((value(text(PRM_Retention_factor__c)))/100)

), 

0)))</formula>
        <label>Guidewire Revenue Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PRM_Influence_Factor_Rate__c</fullName>
        <label>GW Influence Factor Rate</label>
        <picklist>
            <controllingField>Guidewire_Role__c</controllingField>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRM_Integration_Existence_Factor__c</fullName>
        <label>Partner Integration Existence Factor</label>
        <picklist>
            <controllingField>Partner_Role__c</controllingField>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRM_Partner_Account_Exec__c</fullName>
        <label>Partner Account Exec</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRM_Partner_Account_Exec_s_Email__c</fullName>
        <label>Partner Account Exec ‘s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PRM_Partner_Contribution_Factor__c</fullName>
        <label>Partner Contribution Factor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PRM_Partner_Influence_Factor__c</fullName>
        <label>Partner Influence Factor</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRM_Partner_Revenue_Share__c</fullName>
        <description>(value(text(PRM_Integration_Existence_Factor__c)))/100 * (value(text(PRM_Revenue_Sharing_Rate__c))) * value(text(Amount)) * (value(text(PRM_Partner_Contribution_Factor__c)))/100</description>
        <formula>IF(
ISPICKVAL(PRM_Revenue_Sharing_Frequency__c, &quot;One Time&quot;)
 &amp;&amp; (ISPICKVAL(PRM_Partner_Influence_Factor__c, &quot;&quot;)
 || (ISPICKVAL(PRM_Partner_Influence_Factor__c, &quot;0&quot;))),
(PRM_Commission_Rate__c * Amount), 


IF(
ISPICKVAL(PRM_Revenue_Sharing_Frequency__c, &quot;One Time&quot;)
&amp;&amp; !ISPICKVAL(PRM_Partner_Influence_Factor__c, &quot;0&quot;),
(PRM_Commission_Rate__c * Amount * value(text(PRM_Partner_Influence_Factor__c))/100),


IF(
ISPICKVAL(PRM_Revenue_Sharing_Frequency__c, &quot;Recurring&quot;),
((value(text(PRM_Integration_Existence_Factor__c)))/100 * (value(text(PRM_Revenue_Sharing_Rate__c))) * Amount * (value(text(PRM_Partner_Contribution_Factor__c)))

),

0)))</formula>
        <inlineHelpText>Partner Shared Revenue owed to Guidewire</inlineHelpText>
        <label>Partner Revenue Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PRM_Referring_Partner2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Referring Partner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Referring Partner)</relationshipLabel>
        <relationshipName>Opportunities6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PRM_Retention_factor__c</fullName>
        <label>GW Retention Factor</label>
        <picklist>
            <controllingField>Guidewire_Role__c</controllingField>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRM_Revenue_Share__c</fullName>
        <description>Placeholder</description>
        <formula>Amount * Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PRM_Revenue_Sharing_Frequency__c</fullName>
        <label>Revenue Sharing Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>One Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recurring</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRM_Revenue_Sharing_Rate__c</fullName>
        <label>Partner Revenue Sharing Rate</label>
        <summarizedField>OpportunityLineItem.Revenue_Sharing_Rate2__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PRM_Total_Opportunity_Value__c</fullName>
        <formula>Amount +  PRM_GW_Product_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Opportunity Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PRM_Total_Revenue__c</fullName>
        <formula>Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paid_Revenue_To_Date__c</fullName>
        <label>Paid Revenue To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partner_1_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner 1 Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (With Partner Account)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>